<resources>
    <string name="app_name">Suan Chan</string>
    <string name="add_new">Add new</string>
    <string name="search">Search</string>
    <string name="first_priority">First priority</string>
    <string name="second_priority">Second priority</string>
    <string name="third_priority">Third priority</string>
    <string name="note_image">Note image</string>
    <string name="sample">sample</string>
    <string name="sample_date">00/00/0000 00:00</string>
    <string name="priority_icon">Priority icon</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="text">Text</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="successful_save">Save successful</string>
    <string name="none">None</string>
</resources>