<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteInfoActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/note_info_img"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_crop_original_24"
            android:contentDescription="@string/note_image"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/note_info_title"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="text" />
                <ImageView
                    android:id="@+id/note_info_priority"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_filter_none_24"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/note_info_description"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/note_info_text"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        />

    <Button
        android:id="@+id/note_info_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>